--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <title>Riddles</title>
 </head>
 <body>
-    <header>ISA IS GOD</header>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta dignissimos eveniet ex expedita, hic illum impedit itaque iure laboriosam magni nam, nostrum nulla omnis optio pariatur perspiciatis provident recusandae reiciendis?</p>
+    <nav>
+        <ul>
+            <li>Main</li>
+            <li>B</li>
+            <li>C</li>
+        </ul>
+    </nav>
 </body>
 </html>
