--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Riddles</title>
 </head>
 <body>
-    <nav>
+    <nav style="background-color: crimson;">
         <ul>
             <li>Main</li>
             <li>B</li>
