--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <li>Main</li>
             <li>B</li>
             <li>C</li>
-            <li>ISA</li>
+            <li>ISsA</li>
         </ul>
     </nav>
 </body>
