--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <li>B</li>
             <li>C</li>
             <li>ISsA</li>
+            <li>Nathan</li>
         </ul>
     </nav>
 </body>
