--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <li>C</li>
             <li>ISA</li>
             <li>Nathan</li>
+            <li>Nathan2</li>
         </ul>
     </nav>
 </body>
