testing out navigation bar settings

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Riddles</title>
+    <link rel="stylesheet" type="text/css" href="stylesheet.css"
 </head>
 <body>
-    <nav style="background-color: crimson;">
+    <div class="navBar">
         <ul>
             <li>Main</li>
             <li>B</li>
@@ -14,6 +15,6 @@
             <li>Nathan</li>
             <li>Nathan2</li>
         </ul>
-    </nav>
+    </div>
 </body>
 </html>
