--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <li>ISA</li>
             <li>Nathan</li>
             <li>Nathan2</li>
+            <li>Isa is a really cool dude right?</li>
         </ul>
     </div>
 </body>
