added nav bar styles, sample logo image

--- a/index.html
+++ b/index.html
@@ -2,20 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href='https://fonts.googleapis.com/css?family=PT+Serif' rel='stylesheet' type='text/css'>
     <title>Riddles</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css"
 </head>
 <body>
-    <div class="navBar">
+    <nav class="navBar">
         <ul>
-            <li>Main</li>
-            <li>B</li>
-            <li>C</li>
-            <li>ISA</li>
-            <li>Nathan</li>
-            <li>Nathan2</li>
-            <li>Isa is a really cool dude right?</li>
+            <li>Home</li>
+            <li>Log In</li>
+            <li>Sign Up</li>
+            <li>Contact</li>
         </ul>
+    </nav>
+    <div class="logo">
+        <img src="Images/logo.png" alt="logo" style="width:100px; height:100px;"/>
     </div>
 </body>
 </html>
