Ditched the logo, made navbar responsive

--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <link href='https://fonts.googleapis.com/css?family=PT+Serif' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Cinzel' rel='stylesheet' type='text/css'>
     <title>Riddles</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css"
 </head>
-<body>
+<body style="margin: 5;">
+    <div class="logo">
+        <header>Enigmatic Mathematics</header>
+    </div>
     <nav class="navBar">
         <ul>
             <li>Home</li>
@@ -14,9 +18,10 @@
             <li>Sign Up</li>
             <li>Contact</li>
         </ul>
+        <div> &#9776 </div>
     </nav>
-    <div class="logo">
-        <img src="Images/logo.png" alt="logo" style="width:100px; height:100px;"/>
-    </div>
+    <main class="mainBody">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam asperiores consectetur et ipsum iusto labore magni neque nesciunt similique sint tempora, tempore, totam vel. Ipsam iste magni nisi quae voluptate.</p>
+    </main>
 </body>
 </html>
