--- a/index.html
+++ b/index.html
@@ -3,10 +3,5 @@
 <head>
 <title>Page Title</title>
 </head>
-<body>
-
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
-
-</body>
+<meta http-equiv="refresh" content="1;url="index.php">
 </html>
