--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
 <head>
 <title>Page Title</title>
 </head>
-<meta http-equiv="refresh" content="1;url="index.php">
+<meta http-equiv="refresh" content="1;url="https://riddlesite.github.io/EnigmaticMathematics/index.php">
 </html>
