--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <head>
 <title>Page Title</title>
+<script type="text/javascript">window.location="index.php";</script>
 </head>
-<meta http-equiv="refresh" content="5;url="https://riddlesite.github.io/EnigmaticMathematics/index.php">
 </html>
