--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <head>
 <title>Page Title</title>
-<script type="text/javascript">window.location="index.php";</script>
+<script type="text/javascript">window.location="riddlesite.github.io/enigmaticmathematics/index.php";</script>
 </head>
 </html>
